--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700,700i,900,900i&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
+    <script src="js/chatbot.js" charset="utf-8"></script>
     <title>DR27 job interview</title>
   </head>
   <body>
@@ -14,30 +16,11 @@
       <section id="chatbot">
         <!-- Conversation Flow -->
         <article id="conversation">
-          <p class="dr27">Hello. How are you?</p>
-          <p class="user">Fine, thanks.</p>
-          <p class="user">And you?</p>
-          <p class="dr27">Fine, thanks.</p>
-          <p class="dr27">What can I do for you?</p>
-          <p class="dr27">Hello. How are you?</p>
-          <p class="user">Fine, thanks.</p>
-          <p class="user">And you?</p>
-          <p class="dr27">
-            <a href="">https://www.google.com</a>
-          </p>
-          <figure class="dr27">
-            <img src="https://lorempixel.com/300/300/" alt="">
-            <figcaption>
-              A random image
-            </figcaption>
-          </figure>
-
-          <p class="dr27">What can I do for you?</p>
         </article>
         <!-- Chatbot image -->
         <figure class="avatar" id="dr27">
           <img class="avatar" src="img/dr27.png" alt="Gravatar for DR27">
-          <figcaption class="think">
+          <figcaption class="hide think">
             <span></span>
             <span></span>
             <span></span>
@@ -45,7 +28,7 @@
         </figure>
         <!-- User image + input -->
         <figure  class="avatar" id="user">
-          <figcaption class="think">
+          <figcaption class="hide think">
             <span></span>
             <span></span>
             <span></span>
@@ -53,7 +36,7 @@
           <img class="avatar" src="img/user-icon.png" alt="user avatar">
         </figure>
 
-        <ul id="input">
+        <ul id="input" class="hide">
           <li><button type="button" name="button">I'm bored</button></li>
           <li><button type="button" name="button">Tell me about you</button></li>
           <li>
