--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
+    <script src="data/storyline.js" charset="utf-8"></script>
     <script src="js/chatbot.js" charset="utf-8"></script>
     <title>DR27 job interview</title>
   </head>
