Add play button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </article>
         <!-- Chatbot image -->
         <figure class="avatar" id="dr27">
-          <img class="avatar" src="img/dr27.png" alt="Gravatar for DR27">
+          <img src="img/dr27.png" alt="Gravatar for DR27">
           <figcaption class="hide think">
             <span></span>
             <span></span>
@@ -34,7 +34,7 @@
             <span></span>
             <span></span>
           </figcaption>
-          <img class="avatar" src="img/user-icon.png" alt="user avatar">
+          <img src="img/user-icon.png" alt="user avatar">
         </figure>
 
         <ul id="input" class="hide">
@@ -50,6 +50,11 @@
             </form>
           </li>
         </ul>
+        <nav>
+          <button id="play">
+            Démarrer l'interview
+          </button>
+        </nav>
         <div class="grid"></div>
       </section>
     </main>
